--- a/app/src/main/res/layout/activity_mod_class.xml
+++ b/app/src/main/res/layout/activity_mod_class.xml
@@ -1,12 +1,195 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/mod_class_bg"
     tools:context="com.yujie.heromanager.activity.ModClassActivity">
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        app:layout_heightPercent="8%"
+        android:background="#d6161c20"
+        android:layout_height="0dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="修改/添加班级信息"
+            android:textSize="22dp"
+            android:layout_centerInParent="true"
+            android:textColor="#fff"
+            />
+    </RelativeLayout>
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_widthPercent="15%"
+        app:layout_heightPercent="15%"
+        android:layout_centerHorizontal="true"
+        app:layout_marginTopPercent="9%"
+        android:src="@mipmap/app_icon"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="班级名称:"
+        android:textColor="#fff"
+        android:textSize="20dp"
+        app:layout_marginTopPercent="33%"
+        app:layout_marginLeftPercent="5%"
+        />
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        app:layout_widthPercent="50%"
+        android:textColor="#fff"
+        android:hint="请输入班级名称"
+        android:textColorHint="#fff"
+        android:background="@null"
+        app:layout_marginTopPercent="33%"
+        android:id="@+id/className"
+        app:layout_marginLeftPercent="20%"
+        />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_widthPercent="50%"
+        android:background="#fff"
+        app:layout_marginTopPercent="40%"
+        app:layout_marginLeftPercent="20%"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="选择地区:"
+        android:textColor="#fff"
+        android:textSize="20dp"
+        app:layout_marginTopPercent="43%"
+        app:layout_marginLeftPercent="5%"
+        />
+
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_heightPercent="8%"
+        android:textSize="20dp"
+        app:layout_widthPercent="50%"
+        android:textColor="#fff"
+        android:textColorHint="#fff"
+        android:background="@drawable/common_btn_bg"
+        app:layout_marginTopPercent="43%"
+        android:id="@+id/areaSpinner"
+        app:layout_marginLeftPercent="20%"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="选择学科:"
+        android:textColor="#fff"
+        android:textSize="20dp"
+        app:layout_marginTopPercent="52%"
+        app:layout_marginLeftPercent="5%"
+        />
+
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_heightPercent="8%"
+        android:textSize="20dp"
+        app:layout_widthPercent="50%"
+        android:textColor="#fff"
+        android:textColorHint="#fff"
+        android:background="@drawable/common_btn_bg"
+        app:layout_marginTopPercent="52%"
+        android:id="@+id/courseSpinner"
+        app:layout_marginLeftPercent="20%"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="选择地区:"
+        android:textColor="#fff"
+        android:textSize="20dp"
+        app:layout_marginTopPercent="61%"
+        app:layout_marginLeftPercent="5%"
+        />
+
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_heightPercent="8%"
+        android:textSize="20dp"
+        app:layout_widthPercent="50%"
+        android:textColor="#fff"
+        android:textColorHint="#fff"
+        app:layout_marginTopPercent="61%"
+        android:id="@+id/timeSpinner"
+        android:background="@drawable/common_btn_bg"
+        app:layout_marginLeftPercent="20%"
+        />
+
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:textColor="#fff"
+        android:id="@+id/getClassSimpleNameBtn"
+        app:layout_widthPercent="35%"
+        android:background="@drawable/login_activity_login_btn_bg"
+        app:layout_marginTopPercent="70%"
+        app:layout_marginLeftPercent="5%"
+        android:text="点击生成班级简称"
+        />
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        app:layout_widthPercent="40%"
+        android:textColor="#fff"
+        android:hint="请输入班级编号,若是个位数请输入01而不是1"
+        android:textColorHint="#fff"
+        android:background="@null"
+        app:layout_marginTopPercent="71%"
+        android:id="@+id/classnum"
+        android:inputType="number"
+        app:layout_marginLeftPercent="45%"
+        />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_widthPercent="40%"
+        android:background="#fff"
+        app:layout_marginTopPercent="79%"
+        app:layout_marginLeftPercent="45%"
+        />
+
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:textColor="#fff"
+        app:layout_widthPercent="35%"
+        android:id="@+id/addClassBtn"
+        android:background="@drawable/common_btn_bg"
+        app:layout_marginTopPercent="85%"
+        app:layout_marginLeftPercent="5%"
+        android:text="新 增"
+        />
+
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:textColor="#fff"
+        android:id="@+id/modClassBtn"
+        app:layout_widthPercent="35%"
+        android:background="@drawable/common_btn_bg"
+        app:layout_marginTopPercent="85%"
+        app:layout_marginLeftPercent="50%"
+        android:text="修 改"
+        />
+</android.support.percent.PercentRelativeLayout>
