--- a/app/src/main/res/layout/item_area_layout.xml
+++ b/app/src/main/res/layout/item_area_layout.xml
@@ -36,4 +36,13 @@
         android:background="#000"
         android:layout_alignParentBottom="true"
         />
+    <Button
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:id="@+id/deleteBtn"
+        android:background="@drawable/delete_btn"
+        />
 </RelativeLayout>
