--- a/app/src/main/res/layout/item_exam_layout.xml
+++ b/app/src/main/res/layout/item_exam_layout.xml
@@ -47,10 +47,10 @@
             app:layout_marginLeftPercent="5%" />
         <CheckBox
             android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:text="挑战"
+            android:layout_height="40dp"
             android:layout_alignParentRight="true"
             app:layout_marginRightPercent="10%"
+            android:button="@null"
             android:background="@drawable/check_box_bg"
             android:layout_centerVertical="true"
             android:id="@+id/exam_status"
